# equity_longshort_backtester

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: index.md
notebooks/: 01_strategy_walkthrough.py  02_attr_rolling_beta.py  demo.ipynb  demo_longonly.ipynb
scripts/: load_data.py  run_backtest.py  run_backtester.py  sweep_costs.py
src/momentum_backtester/: __init__.py  aggregation.py  analysis.py  backtester.py  costs.py  metrics.py  ranking.py  signals.py  utils.py
src/momentum_backtester/adapters/: __init__.py  sp500_github_adapter.py
tests/: test_backtester_smoke.py  test_metrics.py
