[project]
name = "momentum-backtester"
version = "0.1.0"
description = "Sector-neutral momentum backtester. Aim to be a general backtester for equity, long/ longshort."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GZ", email = "zheng.gong94@gmail.com" }]
keywords = ["finance", "quant", "backtest", "momentum", "portfolio"]

dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "requests>=2.31",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "typing-extensions>=4.8",
  "wrds==3.4.0",
  "academic_data_download @ git+https://github.com/ZhengGong-hub/academic_data_download.git@aa260541cb06e5da7de77ead2c4bcc3b3e80ac10",
  "matplotlib"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "pre-commit>=3.7.0",
  "jupytext>=1.16.0",
  "notebook>=7.0",
]

[project.scripts]
run-backtest = "momentum_backtester.scripts.run_backtest:main"
sweep-costs = "momentum_backtester.scripts.sweep_costs:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["momentum_backtester"]

[tool.ruff]
extend = "ruff.toml"

[tool.mypy]
explicit_package_bases = true
